--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "keycloak-js": "4.8.3",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
